v0.5.0/_sources/gallery/histograms/histogram.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/histograms/histogram.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_histograms_histogram.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_histograms_histogram.py:


Histogram
---------
The :meth:`pygmt.Figure.histogram` method can plot regular histograms.
Using the ``series`` parameter allows to set the interval for the width of
each bar. The type of histogram (frequency count or percentage) can be
selected via the ``histtype`` parameter.

.. GENERATED FROM PYTHON SOURCE LINES 9-38



.. image-sg:: /gallery/histograms/images/sphx_glr_histogram_001.png
   :alt: histogram
   :srcset: /gallery/histograms/images/sphx_glr_histogram_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>






|

.. code-block:: default


    import numpy as np
    import pygmt

    np.random.seed(100)

    # generate random elevation data from a normal distribution
    mean = 100  # mean of distribution
    stddev = 25  # standard deviation of distribution
    data = mean + stddev * np.random.randn(521)

    fig = pygmt.Figure()

    fig.histogram(
        data=data,
        # define the frame, add title and set background color to
        # lightgray, add annotations for x and y axis
        frame=['WSne+t"Histogram"+glightgray', 'x+l"Elevation (m)"', 'y+l"Counts"'],
        # generate evenly spaced bins by increments of 5
        series=5,
        # use red3 as color fill for the bars
        fill="red3",
        # use a pen size of 1p to draw the outlines
        pen="1p",
        # choose histogram type 0 = counts [default]
        histtype=0,
    )

    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.055 seconds)


.. _sphx_glr_download_gallery_histograms_histogram.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: histogram.py <histogram.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: histogram.ipynb <histogram.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
